CMAKE_MINIMUM_REQUIRED(VERSION 3.13)

SET(CMAKE_TOOLCHAIN_FILE "/home/lc/vcpkg/scripts/buildsystems/vcpkg.cmake")

PROJECT(Real-Valued-Matrix)

find_package (Threads)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g")

FIND_PACKAGE(Boost REQUIRED)
FIND_PATH(BOOST_INCLUDE_DIR boost)
INCLUDE_DIRECTORIES(${BOOST_INCLUDE_DIR})

INCLUDE_DIRECTORIES(header)
ADD_SUBDIRECTORY(src)

ADD_EXECUTABLE(Real-Valued-Matrix test.cpp src/CPP20Matrix.cpp)
TARGET_LINK_LIBRARIES(Real-Valued-Matrix ${BOOST_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})